--- a/.github/workflows/convertMarkdown.yml
+++ b/.github/workflows/convertMarkdown.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           ref: master
       - name: Install pandoc
-        run: apt install -y pandoc
+        run: sudo apt install -y pandoc
       - name: Convert Markdown to HTML
         run: find -type f -name '*.md' | sed -e 's/\.md$//' | xargs -L 1 -I {} pandoc -f markdown -t html -o {}.html {}.md
       - name: Checkout branch
