--- a/.github/workflows/convertMarkdown.yml
+++ b/.github/workflows/convertMarkdown.yml
@@ -19,10 +19,10 @@ jobs:
       - name: Install pandoc
         run: sudo apt install -y pandoc
       - name: Convert Markdown to HTML
-        run: find -type f -name '*.md' | sed -e 's/\.md$//' | xargs -L 1 -I {} pandoc -f markdown -t html -o {}.html {}.md
+        run: find -type f -name '*.md' | sed -e 's/\.md$//' | xargs -L 1 -I {} pandoc --verbose -f markdown -t html -o {}.html {}.md
       - name: Checkout branch & Commit files
         run: |
-          find -type d -name '.git' -prune -o -type f -not -name '*.md' -print | xargs -L 1 -I {} rm "{}"
+          find -type d -name '.git' -prune -o -type f -not -name '*.html' -print | xargs -L 1 -I {} rm "{}"
           git add *.html
           git checkout -b release
           git commit -v -m "[Bot] Auto build $(date +'%Y-%m-%d')"
